* Thu Nov 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.2-0
- Bug fixes:
  - Set up FIPS-compliant configuration, not just when
    simp_options::fips is true, but also when the server is already
    in FIPS mode.
  - Insert token password into the NSS database after configuring
    the NSS database for FIPS.
- Updated the tests.

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.1-0
- Confine puppet version in metadata.json

* Fri Jan 13 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.0.0-0
- Updated pki scheme.
- Application certs now managed in /etc/pki/simp_apps/libreswan/x509

* Thu Dec 22 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.0.0-0
- Update Global Catalysts
- Strong type

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.0-0
- Update version to reflect SIMP6 dependencies
- Update to SIMP6 dependencies
- Minor cleanup

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.0.1-0
- Minor cleanup

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.0-0
- Updated iptables dependency version

* Wed Oct 12 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.0-0
- Added support for CentOS 6
- Fix several bugs in the following categories:
  - Use of wrong variables (cut and paste errors or typos)
  - Improper parameter validations
  - Parameters not being used in erb files.
  - OBE names of ipsec settings.
  - Missing quotes/braces around settings that can contain whitespace
- Expose more ipsec settings.
- Allow IPv6 addresses

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.1-0
- Fix Forge `haveged` dependency name

* Thu Jun 30 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0-0
- Initial release for CentOS 7 only