@@ -1,0 +1,43 @@
+HOSTS:
+  left7:
+    roles:
+      - server
+      - left7
+      - agent
+      - libreswan
+      - default
+    platform:   el-7-x86_64
+    box:        centos/7
+    hypervisor: vagrant
+  right7:
+    roles:
+      - server
+      - right7
+      - agent
+      - libreswan
+    platform:   el-7-x86_64
+    box:        centos/7
+    hypervisor: vagrant
+  left6:
+    roles:
+      - server
+      - left6
+      - agent
+      - libreswan
+    platform:   el-6-x86_64
+    box:        centos/6
+    hypervisor: vagrant
+  right6:
+    roles:
+      - server
+      - right6
+      - agent
+      - libreswan
+    platform:   el-6-x86_64
+    box:        centos/6
+    hypervisor: vagrant
+CONFIG:
+  log_level: verbose
+  type:      aio
+  puppet_collection: puppet5
+  vagrant_memsize: 256
